The hero part ended

--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+@property --degree{
+    syntax: "<angle>";
+    inherits: false;
+    initial-value: 0deg;
+}
+@layer components{
+    .moto{
+        color: transparent;
+        background-clip: text;
+        background-image: conic-gradient(from var(--degree),gainsboro,orange,green);
+        animation: rotatebg 3s infinite linear;
+    }
+    @keyframes rotatebg {
+        from{
+        --degree:0deg;
+        }
+        to{
+        --degree:350deg;
+        }
+    }
+}
